math-core/src/snapshots/math_core__tests__plus_after_equal_with_space.snap
---
source: math-core/src/lib.rs
expression: "x =\\, +4"
---
<math>
    <mi>x</mi>
    <mo>=</mo>
    <mspace width="0.16666667em"/>
    <mo lspace="0" rspace="0">+</mo>
    <mn>4</mn>
</math>
