math-core/src/snapshots/math_core__tests__plus_after_open_paren.snap
---
source: math-core/src/lib.rs
expression: (+x)
---
<math>
    <mo stretchy="false">(</mo>
    <mo lspace="0" rspace="0">+</mo>
    <mi>x</mi>
    <mo stretchy="false">)</mo>
</math>
