math-core/src/snapshots/math_core__tests__plus_after_sum.snap
---
source: math-core/src/lib.rs
expression: "\\sum + 4"
---
<math>
    <mo lspace="0">∑</mo>
    <mo lspace="0" rspace="0">+</mo>
    <mn>4</mn>
</math>
