math-core/src/snapshots/math_core__tests__plus_before_closing_paren.snap
---
source: math-core/src/lib.rs
expression: (x+)
---
<math>
    <mo stretchy="false">(</mo>
    <mi>x</mi>
    <mo lspace="0" rspace="0">+</mo>
    <mo stretchy="false">)</mo>
</math>
