math-core/src/snapshots/math_core__tests__plus_before_open_paren.snap
---
source: math-core/src/lib.rs
expression: x+(x)
---
<math>
    <mi>x</mi>
    <mo>+</mo>
    <mo stretchy="false">(</mo>
    <mi>x</mi>
    <mo stretchy="false">)</mo>
</math>
