math-core/src/snapshots/math_core__tests__plus_before_punctuation.snap
---
source: math-core/src/lib.rs
expression: "4+,"
---
<math>
    <mn>4</mn>
    <mo lspace="0" rspace="0">+</mo>
    <mo>,</mo>
</math>
