math-core/src/snapshots/math_core__tests__prime_alone.snap
---
source: math-core/src/lib.rs
expression: "'"
---
<math>
    <msup>
        <mrow>
        </mrow>
        <mo>′</mo>
    </msup>
</math>
